--- a/Task1/index.html
+++ b/Task1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DJSCE STudent Data</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,48 +17,64 @@
         <form id="student-form">
             <div class="form-row">
                 <div class="form-group">
-                    <label for="studentName">Student Name *</label>
-                    <input type="text" id="studentName" name="studentName" required>
+                    <label>
+                        Student Name *
+                        <input type="text" name="studentName" required>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="college">College *</label>
-                    <input type="text" id="college" name="college" required>
+                    <label>
+                        College *
+                        <input type="text" name="college" required>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="cgpa">CGPA *</label>
-                    <input type="number" id="cgpa" name="cgpa" step="0.01" min="0" max="10" required>
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="phone">Phone *</label>
-                    <input type="tel" id="phone" name="phone" required>
-                </div>
-                <div class="form-group">
-                    <label for="sapid">SAP ID *</label>
-                    <input type="text" id="sapid" name="sapid" required>
-                </div>
-                <div class="form-group">
-                    <label for="batch">Batch *</label>
-                    <input type="text" id="batch" name="batch" required>
+                    <label>
+                        CGPA *
+                        <input type="number" name="cgpa" step="0.01" min="0" max="10" required>
+                    </label>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group">
-                    <label for="year">Year *</label>
-                    <select id="year" name="year" required>
+                    <label>
+                        Phone *
+                        <input type="tel" name="phone" required>
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        SAP ID *
+                        <input type="text" name="sapid" required>
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>
+                        Batch *
+                        <input type="text" name="batch" required>
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label>
+                        Year *
+                        <select name="year" required>
                         <option value="">Select Year</option>
                         <option value="1">1st Year</option>
                         <option value="2">2nd Year</option>
                         <option value="3">3rd Year</option>
                         <option value="4">4th Year</option>
                     </select>
+                    </label>
                 </div>
                 <div class="form-group">
-                    <label for="address">Address *</label>
-                    <input type="text" id="address" name="address" required>
+                    <label>
+                        Address *
+                        <input type="text" name="address" required>
+                    </label>
                 </div>
             </div>
 
