--- a/Task1/index.html
+++ b/Task1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJSCE STudent Data</title>
+    <title>DJSCE Student Data</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,19 +19,19 @@
                 <div class="form-group">
                     <label>
                         Student Name *
-                        <input type="text" name="studentName" required>
+                        <input type="text" id="studentName" name="studentName" required>
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
                         College *
-                        <input type="text" name="college" required>
+                        <input type="text" id="college" name="college" required>
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
                         CGPA *
-                        <input type="number" name="cgpa" step="0.01" min="0" max="10" required>
+                        <input type="number" id="cgpa" name="cgpa" step="0.01" min="0" max="10" required>
                     </label>
                 </div>
             </div>
@@ -40,19 +40,19 @@
                 <div class="form-group">
                     <label>
                         Phone *
-                        <input type="tel" name="phone" required>
+                        <input type="tel" id="phone" name="phone" required>
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
                         SAP ID *
-                        <input type="text" name="sapid" required>
+                        <input type="text" id="sapid" name="sapid" required>
                     </label>
                 </div>
                 <div class="form-group">
                     <label>
                         Batch *
-                        <input type="text" name="batch" required>
+                        <input type="text" id="batch" name="batch" required>
                     </label>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <div class="form-group">
                     <label>
                         Year *
-                        <select name="year" required>
+                        <select id="year" name="year" required>
                         <option value="">Select Year</option>
                         <option value="1">1st Year</option>
                         <option value="2">2nd Year</option>
@@ -73,7 +73,7 @@
                 <div class="form-group">
                     <label>
                         Address *
-                        <input type="text" name="address" required>
+                        <input type="text" id="address" name="address" required>
                     </label>
                 </div>
             </div>
