--- a/Task1/index.html
+++ b/Task1/index.html
@@ -63,10 +63,10 @@
                         Year *
                         <select id="year" name="year" required>
                         <option value="">Select Year</option>
-                        <option value="1">1st Year</option>
-                        <option value="2">2nd Year</option>
-                        <option value="3">3rd Year</option>
-                        <option value="4">4th Year</option>
+                        <option value="First Year">First Year</option>
+                        <option value="Second Year">Second Year</option>
+                        <option value="Third Year">Third Year</option>
+                        <option value="Fourth Year">Fourth Year</option>
                     </select>
                     </label>
                 </div>
